<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/Inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/editTextNumberDecimal1"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/number2"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/editTextNumberDecimal1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/number1"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="34sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Inputs"
        app:layout_constraintVertical_bias="0.161">

        <Button
            android:id="@+id/add"
            android:layout_width="225dp"
            android:layout_height="97dp"
            android:backgroundTint="@color/black"
            android:fontFamily="monospace"
            android:text="@string/ADD"
            android:textSize="34sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="225dp"
            android:layout_height="97dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="monospace"
            android:text="@string/RESET"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="monospace"
            android:text="@string/RESULT"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>